<resources>
    <string name="app_name">Daily Devotion</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lblBtnDevotion">Devotion</string>
    <string name="lblBtnBible">Bible</string>
    <string name="lblBtnInst">Instruction</string>
    <string name="lblOld">Old Testament</string>
    <string name="lblNew">New Testament</string>
    <string name="lblMDev">Morning Devotion</string>
    <string name="lblEDev">Evening Devotion</string>
    <string name="lblInstTitle">SOAP Bible Study Plan</string>
    <string name="lblLoading">Loading, Please wait...</string>
    <string name="scriptureDesc">\tTake today\'s Bible reading, pray over it and then read through slowly. God will
    direct your attention to certain verses or sections. Write these down in your
    journal and focus your study there.</string>
    <string name="obsDesc">\tWhat is God showing you in this passage\? Jot down in your journal any words or
    events that stand out. Are there any truths God wants you to learn\? Warnings\?
    Commands\? Guiding principles\? Record those in your journal. Now what is the
    overall message God has for you in this passage\?</string>
    <string name="applyDesc">\tNow it\'s time to get personal. How does this affect your life\? Does God have
    instruction for you today\? Encouragement\? Correction\? Write down in your
    journal God\'s personal message to you.</string>
    <string name="prayDesc">\tPrayer is a two-way conversation with God. You may find that as you pray over
    what God has shown to you, He will reveal even more than He is wanting to show.
    Be listening and journal your prayers\!</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="m1">January</string>
    <string name="m2">February</string>
    <string name="m3">March</string>
    <string name="m4">April</string>
    <string name="m5">May</string>
    <string name="m6">June</string>
    <string name="m7">July</string>
    <string name="m8">August</string>
    <string name="m9">September</string>
    <string name="m10">October</string>
    <string name="m11">November</string>
    <string name="m12">December</string>
    <string name="btnBible">BIBLE</string>
    <string name="btnDev">DAILY DEVOTION</string>
    <string name="btnPattern">DEVOTION\nPATTERN</string>
    <string name="infoOldT">\tThe first part of the Christian Bible.
        Most of the books were originally written in Hebrew, some in Aramaic, between 1200 and 100 BC.
    They comprise the chief texts of the law, history prophecy and wisdom literature of the ancient people of Israel.</string>
    <string name="infoNewT">\tThe second part of the Christian Bible. This part discusses the teachings and person of Jesus as well as events in first-century Christianity.</string>
</resources>
